# pico-lean-stream-io

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lean_stream_io/: CMakeLists.txt  LICENSE.md  filestream.hpp  port.c
